--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-    <script src="gesture-detector.js"></script>
-    <script src="gesture-handler.js"></script>
   </head>
 
   <body>
@@ -33,7 +31,7 @@
         cursor="fuse: false; rayOrigin: mouse;"
         id="markerA"
        >
-      <a-sound src="url(sound.mp3)" autoplay="true"></a-sound>
+      <a-sound src="url(sound.mp3)" autoplay="true" loop="false"></a-sound>
 </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
