--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
   </head>
 
   <body>
@@ -31,7 +31,7 @@
         cursor="fuse: false; rayOrigin: mouse;"
         id="markerA"
        >
-      <a-sound src="url(sound.mp3)" autoplay="true" loop="false"></a-sound>
+      <a-sound src="url(sound.mp3)" autoplay="true"></a-sound>
 </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
