--- a/index.html
+++ b/index.html
@@ -31,9 +31,19 @@
         cursor="fuse: false; rayOrigin: mouse;"
         id="markerA"
        >
-      <a-sound src="url(sound.mp3)" autoplay="true"></a-sound>
+      <a-sound src="url(sound.mp3)" autoplay="true" id="sound"></a-sound>
 </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
+
+     <script>
+      document.querySelector('#markerA').addEventListener('markerFound', function() {
+        document.querySelector('#sound').components.sound.playSound();
+      });
+
+      document.querySelector('#markerA').addEventListener('markerLost', function() {
+        document.querySelector('#sound').components.sound.stopSound();
+      });
+    </script>
   </body>
 </html>
